--- a/config/database.yml
+++ b/config/database.yml
@@ -7,14 +7,14 @@ default: &default
 
 development:
   <<: *default
-  database: rails5base_development
+  database: pomo_task_development
 
 test:
   <<: *default
-  database: rails5base_test
+  database: pomo_task_test
 
 production:
   <<: *default
-  database: rails5base_production
-  username: rails5base
+  database: pomo_task_production
+  username: pomo_task
   password: <%= ENV['RAILS_BASE_DATABASE_PASSWORD'] %>
