--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "rails-erb-loader": "^5.0.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
+    "vue": "^2.3.2",
+    "vue-loader": "^12.0.3",
+    "vue-template-compiler": "^2.3.2",
     "webpack": "^2.4.1",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
